2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, configure.in: Added configure option --enable-utmpx,
	disabled by default. This defines USE_UTMPX, which should be used
	instead of HAVE_UTMPX_H.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/po/fr.po: Fix typo.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/newgrp.c: Close the databases before changing the UDI and
	GID.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/myname.c: Updated splint annotations.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.c: Added splint annotations.
	* lib/commonio.c: old_context should be local to commonio_close(),
	not global.

2009-04-26  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Do not freecon strings duplicated with strdup.
	Also avoid allocation of memory.
	* src/passwd.c: Use SYSLOG instead of syslog.

2009-04-25  Miroslav Kure  <kurem@upcase.inf.upol.cz>

	* po/cs.po: Updated to 352T7f8u

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/commonio.h, lib/commonio.c: Added splint annotations.
	* lib/commonio.c: Do not assumes eptr is always notnull.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, po/pt.po: Updated Portuguese translation.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/copydir.c: Added splint annotations.
	* libmisc/copydir.c: Added assert to help splint.
	* libmisc/copydir.c: Free allocated structures in cas of failure.
	* libmisc/copydir.c: Avoid implicit conversion of pointers to
	booleans.
	* libmisc/copydir.c: Use buffers of size PATH_MAX instead of 1024
	for filenames.
	* libmisc/copydir.c: Use fchmod and fchown to change the mode of
	the opened file.
	* libmisc/copydir.c: Indicate the mode to open(), even if we chmod
	later.

2009-04-25  Nicolas François  <nicolas.francois@centraliens.net>
